--- a/client/package.json
+++ b/client/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
     "axios": "^1.6.8",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.2",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.0.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
