--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "front",
-  "version": "0.1.0",
+  "name": "fuel_tracker_client",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,6 +27,7 @@
     "react-icons": "^5.0.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7"
