--- a/server/package.json
+++ b/server/package.json
@@ -34,9 +34,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
