--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
       "install": "cd server && npm install & cd ../client && npm install",
       "build": "cd server && npm run build & cd ../client && npm run build",
-      "start:server": "cd server && npm run start:prod",
-      "start:client": "cd client && npm run start"
+      "start:server": "cd server && npm run start:dev",
+      "start:client": "cd client && npm run dev"
     },
     "keywords": [],
     "author": "Benaun",
